/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

2025-04-23 12:15 UTC -0300 JoseQuintas jmcquintas-gmail.com
  * clean.sh
  * samples/allhbp.hbp
  * samples/clean.sh
  * samples/democheckbox.hbp
  - samples/demomenuxml.hbp
  * samples/demomenuxml.prg
     ! demomenuxml to demoall
  * samples/demoall.hbp
  * samples/demoall.prg
  * samples/demo.ch
     ! experimental LoadResourceDemo(), and error routine about it
     ! Test using mingw on Win11 ok
     ! Compile on same way as before, but source code becames resource
     ! Comment function if fail on another compiler

2025-04-23 16:30 UTC+0200 Wilfried Brunken DF7BE
* source/gtk/hbrowse.prg
* test/checkbox.hbp
* test/hbmk.hbm
* test/tickets/hbmk.hbm (New)
* test/tickets/ticket203.hbp (moved from test/tickets/ticket204.hbp)
* test/tickets/ticket203.prg (moved from test/tickets/ticket204.prg)
  ! Ticket #204 are #203, so renamed
  ! Ticket #204 Browse GTK Linux, puts three dots in the column unnecessarily:
  ! First fix the default length of dates in HBROWSE class.
  ! To be continued with the other bugs reported by Itamar M. Lins Jr.


2025-04-23 03:30 UTC -0300 Jose Quintas jmcquintas-gmail.com
  * samples/democheckbox.prg
    ! reduced from 6 to 3 checkbox, removed tab
  * samples/demotreebox.prg
    ! fix error when no tabs to delete
  * samples/demotab.hbp
  * samples/demotab.prg
    ! add content to tabs

2025-04-22 23:30 UTC -0300 Jose Quintas jmcquintas-gmail.com
  * samples/demo.ch
  * samples/demobrowseado.prg
  * samples/democheckbox.prg
  * samples/demomonthcal.prg
    ! another bad name democodebutton seems another sample
    !    changed demo.ch and related to ButtonForSample()
  * samples/demotreebox.prg