@@ -26,10 +26,16 @@ Local aSample := { {"Alex Santos Silva",17,1200}, {"Victor Vladimir Soares",42,1
 
    // In case of using hwg_CreateArList() you may set some columns options later,
    // for example:
-   oBrw:aColumns[1]:heading := "Name"
-   oBrw:aColumns[2]:heading := "Age"
+   // DF7BE:
+   // Bugfix for get length of column:
+   // Browsing a database, the length of every column is delivered by the 
+   // structure data.
+   // For arrays, in the init of browse, the field length is got from the length of the
+   // header text. So trim the header text with PADR() to the desired length ! 
+   oBrw:aColumns[1]:heading := PADR("Name",45)
+   oBrw:aColumns[2]:heading := PADR("Age",4)
    oBrw:aColumns[2]:lEditable := .T.
-   oBrw:aColumns[1]:length:=30   && old: 20
+ //  oBrw:aColumns[1]:length:=30   && old: 20
 
    @ 100,180 BUTTON 'Close' SIZE 100,28 ON CLICK {|| oDlg:Close() } ;
          ON SIZE ANCHOR_LEFTABS + ANCHOR_RIGHTABS + ANCHOR_BOTTOMABS
@@ -37,3 +43,5 @@ Local aSample := { {"Alex Santos Silva",17,1200}, {"Victor Vladimir Soares",42,1
    ACTIVATE DIALOG oDlg CENTER
 Return Nil
 
+FUNCTION DATELENGTH()
+RETURN IIF (hwg_getCentury(),12,10)
