@@ -10,7 +10,7 @@ RETURN NIL
 
 Function Test()
 Local oDlg, oBrw
-Local aSample := { {"Alex Santos Silva XYZ  ",17,1200,ctod('01/01/2025'),1}, {"Victor Vladimir Soares ABC  ",42,1600,ctod('01/02/2025'),2}, {"John Lennon Bob Marley   ",31,1000,ctod('01/03/2025'),3} }
+Local aSample := { {"Alex Santos Silva XYZ",17,1200,ctod('01/01/2025'),1}, {"Victor Vladimir Soares ABCDEF",42,1600,ctod('01/02/2025'),2}, {"John Lennon Bob Marley",31,1000,ctod('01/03/2025'),3} }
 
    INIT DIALOG oDlg TITLE "Browse 3 dots";
          AT 0, 0 SIZE 520, 230 ;
@@ -21,9 +21,9 @@ Local aSample := { {"Alex Santos Silva XYZ  ",17,1200,ctod('01/01/2025'),1}, {"V
 
    hwg_CreateArList( oBrw, aSample )
 
-   oBrw:aColumns[1]:heading := "Name"
-   oBrw:aColumns[2]:heading := "Age"
-   oBrw:aColumns[4]:heading := "Date"
+   oBrw:aColumns[1]:heading := PADR("Name",30)
+   oBrw:aColumns[2]:heading := PADR("Age",3)
+   oBrw:aColumns[4]:heading := PADR("Date",DATELENGTH())
    * Comment added by Itamar M. Lins Jr. at 23.04.2025
    * DF7BE:
    * Now the length must have a secure addition :
@@ -38,7 +38,7 @@ Local aSample := { {"Alex Santos Silva XYZ  ",17,1200,ctod('01/01/2025'),1}, {"V
    *   ENDIF
    *
    // oBrw:aColumns[4]:length:=12 //->date is 8 characters, I put + 1, and Browse GTK cut and put "..." 
-   
+   // For bug with field length see comment in ticket203.prg !
    // oBrw:aColumns[4]:length:=9
    oBrw:aColumns[2]:lEditable := .T.
    oBrw:aColumns[1]:length:=20
@@ -50,3 +50,6 @@ Local aSample := { {"Alex Santos Silva XYZ  ",17,1200,ctod('01/01/2025'),1}, {"V
    ACTIVATE DIALOG oDlg CENTER
 Return Nil
 
+
+FUNCTION DATELENGTH()
+RETURN IIF (hwg_getCentury(),12,10)
